# Introduction_slam_explorer_ros2

./: CMakeLists.txt  README.md  package.xml  requirements_voice.txt  setup.py  setup.py.backup
config/: explore.yaml  explore_fixed.yaml  explore_optimized.yaml  navigation.yaml  navigation_robust.yaml  navigation_simple.yaml  salon_explore.yaml  slam_apartment.yaml  slam_optimized.yaml  slam_salon.yaml  slam_salon.yml  slam_simple.yaml  slam_turtlebot.yaml  stable_nav_config.yaml  voice_commands.yaml
config/pruebas/: apartment_explore.yaml  explore.yaml  explore_robust.yaml  salon_explore.yaml  slam_apartment.yaml
launch/: apartment_explore.launch.py  autonomous_explore.launch.py  explore.launch.py  explore_robust.launch.py  explore_robust_fixed.launch.py  explore_salon_corrected.launch.py  explore_salon_fixed.launch.py  explore_small_house.launch.py  navigation.launch.py  salon_explore.launch.py  salon_gazebo.launch.py  salon_gazebo_fixed.launch.py  voice_control_launch.py
launch/pruebas/: apartment_explore.launch.py  explore.launch.py  explore_fixed.launch.py  explore_salon.launch.py  navigation.launch.py  salon_explore.launch.py  turtlebot_slam.launch.py
maps/: lidis.pgm  lidis.yaml  mi_primer_mapa.pgm  mi_primer_mapa.yaml
models/salon_model/: model.config  model.sdf
models/salon_model/meshes/: salon.dae  salon_01.dae
rviz/: explore.rviz  explore_robust.rviz  nuevo.rviz  salon_explore.rviz
rviz/pruebas/: nav2_config.rviz  salon_explore.rviz  slam_config.rviz
scripts/: costmap_cleaner.py  enhanced_exploration_monitor.py  exploration_monitor.py  exploration_visualizer.py  initial_mapper.py  laser_filter.py  setup_robust_exploration.sh  setup_salon_model.sh  setup_voice.py
scripts/pruebas/: check_salon_model.sh  exploration_diagnostics.py  restart_exploration.py  setup_salon_exploration.sh  test_salon_model.py
tutorial_pkg/: costmap_cleaner.py  exploration_monitor.py  exploration_restarter.py  exploration_visualizer.py  initial_mapper.py  obstacle_diagnostics.py  voice_command_handler.py
worlds/: apartment_world.world  salon_world.world  test_zone.world
